opam-version: "2.0"
maintainer: "Jean-Christophe.Filliatre@cnrs.fr"
authors: "Jean-Christophe Filliâtre"
synopsis: "A tiny library for two-dimensional arrays"
description: "Elementary functions over two-dimensional arrays. Not a linear algebra library."
license: "LGPL-2.1"
homepage: "https://github.com/backtracking/grid"
doc: "https://backtracking.github.io/grid"
bug-reports: "https://github.com/backtracking/grid/issues"
depends: [
  "ocaml"
  "dune" {>= "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/backtracking/grid.git"
